force-app/main/default/objects/CM_Tag_Challenge__c/CM_Tag_Challenge__c.object-meta.xml
<CustomObject>
    <label>Tag Challenge</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Tag Challenge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>