force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>CM_Date_of_Event__c</fullName>
    <label>Date of Event</label>
    <type>Date</type>
</CustomField>