force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Defended_Tag__c.field-meta.xml
<CustomField>
    <fullName>CM_Defended_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defended Tag</label>
    <type>Checkbox</type>
</CustomField>