force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Losing_Player_s_Previous_Elo__c.field-meta.xml
<CustomField>
    <fullName>CM_Losing_Player_s_Previous_Elo__c</fullName>
    <label>Losing Player&apos;s Previous Elo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>