force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Losing_Player_s_Previous_Elo_archived__c.field-meta.xml
<CustomField>
    <fullName>CM_Losing_Player_s_Previous_Elo_archived__c</fullName>
    <formula>CM_Losing_Player__r.CM_ELO_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archived Losing Player&apos;s Previous Elo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>