force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Losing_Player_s_Previous_Rank__c.field-meta.xml
<CustomField>
    <fullName>CM_Losing_Player_s_Previous_Rank__c</fullName>
    <formula>CM_Losing_Player__r.CM_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Losing Player&apos;s Previous Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>