force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Losing_Players_Elo_Change__c.field-meta.xml
<CustomField>
    <fullName>CM_Losing_Players_Elo_Change__c</fullName>
    <label>CM Losing Players Elo Change</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>