force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Winning_Player__c.field-meta.xml
<CustomField>
    <fullName>CM_Winning_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Player</label>
    <referenceTo>CM_Players__c</referenceTo>
    <relationshipName>Tag_Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>