force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Winning_Player_s_New_Rank__c.field-meta.xml
<CustomField>
    <fullName>CM_Winning_Player_s_New_Rank__c</fullName>
    <label>Winning Player&apos;s New Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>