force-app/main/default/objects/CM_Tag_Challenge__c/fields/CM_Winning_Player_s_Previous_Elo_archive__c.field-meta.xml
<CustomField>
    <fullName>CM_Winning_Player_s_Previous_Elo_archive__c</fullName>
    <formula>CM_Winning_Player__r.CM_ELO_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archived Winning Player&apos;s Previous Elo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>