force-app/main/default/objects/CM_Tag_Challenge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CM_Date_of_Event__c</columns>
    <columns>CM_Winning_Player__c</columns>
    <columns>CM_Winning_Player_s_New_Rank__c</columns>
    <columns>CM_Losing_Player__c</columns>
    <columns>CM_Losing_Player_s_New_Rank__c</columns>
    <columns>CM_Defended_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>